# subtitle-translator-core

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: b06e5797e877_initial_schema.py
app/: main.py  utils.py
app/api/v1/endpoints/: videos.py
app/core/: settings.py
app/db/: base.py
app/models/: __init__.py  base.py  subtitle.py  subtitle_model.py  video.py  video_model.py
app/schemas/requests/: subtitle_request.py  video_request.py
app/schemas/resources/: subtitle_resource.py  video_resource.py
app/services/: translation_service.py  video_service.py
