[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-translator-core"
version = "0.1.0"
description = "A FastAPI-based subtitle translation service"
authors = [
    {name = "Attila Kukel", email = "alitak@alitak.hu"},
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.0",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "yt-dlp==2024.3.10",
    "openai==1.12.0",
    "python-slugify==8.0.1",
    "python-magic==0.4.27",
]

[project.optional-dependencies]
win = ["python-magic-bin==0.4.14"]

[project.urls]
Homepage = "https://github.com/alitak/subtitle-translator-core"

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
